<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="com.inabil.auth.LoginFragmentViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@={loginViewModel.emailET}"
                    app:error="@{loginViewModel.emailError}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/pass_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pass"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={loginViewModel.passET}"
                    app:error="@{loginViewModel.passError}" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:onClick="@{loginViewModel::onLogin}"
                android:text="@string/login"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</layout>